# aoc2022

./: .gitignore  README.md  pyproject.toml
src/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  3.py.py  4.py  5.py  6.py  7.py  8.py  9.py
