[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = "Advent of Code 2022"
authors = ["Kris Korrel <kriskorrel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
progressbar2 = "^4.2.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
